--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update -y && \
 	apt-get full-upgrade -y && \
-	apt-get install git curl wget nano gnupg nginx python3.10-venv unzip socat php php-cli php-fpm php-gd php-mbstring php-xml php-mysql php-pgsql mariadb-server -y
+	apt-get install python3 python3-pip git curl wget nano gnupg nginx python3.10-venv unzip socat php php-cli php-fpm php-gd php-mbstring php-xml php-mysql php-pgsql mariadb-server -y
 
 RUN mkdir -p /etc/apt/keyrings && \
 	curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
@@ -41,17 +41,16 @@ RUN cp /tmp/repo/docker/default /etc/nginx/sites-available/default && \
 RUN mkdir /app && \
 	cp -R /tmp/repo/shop/Backend/* /app/ && \
 	cd /app && \
-	python3 -m venv env && \
-	source env/bin/activate && \
-	pip install -r /app/requirements.txt && \
-	pip install gunicorn && \ 
+	python3 -m pip install -r /app/requirements.txt && \
+	python3 -m pip install gunicorn && \ 
 	cd /var/www/forum && \
 	php-fpm8.1 -R -D && \
 	service nginx start && \
 	cd /app && \
 	service mariadb start && \
 	mariadb -e "GRANT ALL ON *.* TO 'root'@'localhost' IDENTIFIED BY 'SuperSecurePassword' WITH GRANT OPTION;" && \
-	mysql -u root -pSuperSecurePassword -e "FLUSH PRIVILEGES; CREATE DATABASE IF NOT EXISTS forum;" && \
-	python manage.py runserver 0.0.0.0:8000
+	mysql -u root -pSuperSecurePassword -e "FLUSH PRIVILEGES; CREATE DATABASE IF NOT EXISTS forum;"
 
 EXPOSE 80
+
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
